--- a/index.html
+++ b/index.html
@@ -614,8 +614,8 @@
           </p>
           <input
             type="email"
-            placeholder="Enter email"
-            class="input lg:min-w-96"
+            placeholder="Enter email...."
+            class="input min-w-80 lg:min-w-96"
           />
           <a
             class="btn min-h-10 h-10 lg:max-w-36 text-base lg:text-xl font-normal leading-normal bg-agriculture-primary-color text-white hover:bg-agriculture-primary-color transform transition duration-300 ease-in-out hover:scale-110"
