dawat image taking space in mb

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
           <div>
             <img
               src="./assets/dawat-mock-up.png"
-              class="mt-6 ml-6 lg:ml-0"
+              class="mt-6"
               alt="dawat pic"
             />
           </div>
